uncapitalized first letter

--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
       <a href="Work.html" id="logo">KEVINSUN.</a>
     </div>
     <div class="block_element">
-      <a href="Work.html"><div class="inline-block" id=underline>Work</div></a>
+      <a href="work.html"><div class="inline-block" id=underline>Work</div></a>
       <div class="inline-block"><span style="color:#FFB800">About</span></div></a>
       
       <a onClick="openTab(this)"href="#" name="img\Resume.docx (1).pdf">
@@ -42,7 +42,7 @@
   <a href="#home" class="active" id="logo">KEVINSUN.</a>
   <!-- Navigation links (hidden by default) -->
   <div id="myLinks" class="block_element">
-      <a href="Work.html"><div class="inline-block" id=underline2>Work</div></a>
+      <a href="work.html"><div class="inline-block" id=underline2>Work</div></a>
       <a><div class="inline-block"><span style="color:#FFB800">About</span></div></a>
       <a onClick="openTab(this)"href="#" name="img\Resume.docx (1).pdf">
       
