--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,17 @@
   <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
+<--! Website Tracking -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-179551852-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-179551852-1');
+</script>
+  
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="js/index.js"></script>
 <script type="text/javascript">
