--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,18 @@
   <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
-<--! Website Tracking -->
+<!-- Hotjar Tracking Code for https://kevinwksun.github.io/UX-UI_HW_19/Index.htm -->
+<script>
+  (function(h,o,t,j,a,r){
+      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+      h._hjSettings={hjid:2023167,hjsv:6};
+      a=o.getElementsByTagName('head')[0];
+      r=o.createElement('script');r.async=1;
+      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+      a.appendChild(r);
+  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-179551852-1"></script>
 <script>
